--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.25.4",
     "@neondatabase/serverless": "^0.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@t3-oss/env-core": "^0.7.1",
     "aws-sdk": "^2.1474.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -26,7 +27,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
